cmake_minimum_required(VERSION 3.1)
project(rayfork_examples C)

set(CMAKE_C_STANDARD 99)

# Set EXAMPLES_ASSETS_PATH
add_compile_definitions(EXAMPLES_ASSETS_PATH="../../../rayfork-examples/")

# Include dependencies
include_directories(dependencies/)
include_directories(dependencies/sokol)
include_directories(dependencies/glad)

# Setup GLFW
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(dependencies/glfw EXCLUDE_FROM_ALL)

# Include all examples
add_subdirectory(basic-window)
add_subdirectory(basic-shapes)
add_subdirectory(core-input-keys)
add_subdirectory(collision-area)
add_subdirectory(geometric_shapes)
add_subdirectory(raw_audio_stream)
add_subdirectory(hot-code-reloading)
add_subdirectory(texture-bunnymark)
add_subdirectory(first_person_maze)
add_subdirectory(text_measuring)
add_subdirectory(core-input-mouse)
add_subdirectory(core-input-mouse-wheel)
add_subdirectory(dds-image)
add_subdirectory(pkm_image)
add_subdirectory(ktx_image)
add_subdirectory(pvr_image)
add_subdirectory(astc_image)
add_subdirectory(core-2d-camera)
add_subdirectory(core-2d-camera-platformer)
add_subdirectory(texture-rectangle)
add_subdirectory(texture-logo-raylib)
add_subdirectory(texture-mouse-painting)
add_subdirectory(texture-srcrec-destrec)
add_subdirectory(texture-image-drawing)
add_subdirectory(texture-image-loading)
add_subdirectory(texture-image-generation)
add_subdirectory(texture-image-processing)
add_subdirectory(texture-image-text)
add_subdirectory(texture-to-image)
add_subdirectory(texture-raw-data)
add_subdirectory(texture-particles-blending)
add_subdirectory(texture-npatch-drawing)
add_subdirectory(texture-background-scrolling)
add_subdirectory(texture-sprite-button)
add_subdirectory(texture-sprite-explosion)
add_subdirectory(text-raylib-fonts)
add_subdirectory(text-font-spritefont)
add_subdirectory(text-font-loading)
add_subdirectory(text-font-filters)
add_subdirectory(text-font-sdf)
add_subdirectory(text-format-text)
add_subdirectory(text-input-box)
add_subdirectory(text-writing-anim)
add_subdirectory(text-rectangle-bounds)
add_subdirectory(text-unicode)